# SUN_I18N

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README.zh.md
exe/: .gitignore  exe.sln
exe/exe/: MainWnd.cpp  MainWnd.h  exe.cpp  exe.h  exe.rc  exe.vcxproj  exe.vcxproj.filters  inject.cpp  inject.h  pch.cpp  pch.h  resource.h
exe/exe/res/: exe.rc2
src/: dohook.cpp  dohook.h  main.cpp  my_font.cpp  my_font.h  my_printanim.cpp  my_printanim.h  my_scoreanim.cpp  my_scoreanim.h  my_wordanim.cpp  my_wordanim.h  my_wwfont.cpp  my_wwfont.h  pch.cpp  pch.h  re_restatemission.cpp  re_restatemission.h  resource.cpp  resource.h  subtitle.cpp  subtitle.h
src/common/: patch.h
src/hook/: hook.h  hook_it.cpp  hook_it.h
src/patch/: patch.cpp  patch_mapselect.cpp  patch_message.cpp  patch_misc.cpp  patch_misc_text.cpp  patch_movie.cpp  patch_multi_score.cpp  patch_score_print.cpp  patch_slot_text.cpp  patch_string.cpp  patch_tooltip.cpp  patch_version.cpp
src/res/: res.rc  resource.h  select.shp
src/tspp_ex/: anim.h  definitions.cpp  definitions.h  globals.h  mapselect.h  mapstage.h  msfont.h  restatemission.h  scoreanim.h  scorefont.h  scorescreen.h  sfxentry.h
